# AutoHexUploaderSettings

./: .gitignore  CMakeLists.txt
src/: main.cpp
